--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ h1 {
 
 }
 body {
-height: 100vh;
+min-height: 100vh;
   font-family: "Poppin", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-image: url(cards.jpg);
   background-size: cover;
-  background-position:center right;
+  /* background-position:center right; */
   background-repeat: no-repeat;
   text-align: center;
   color: #ffff;
@@ -23,7 +23,7 @@ height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 0px;
 
 
 }
@@ -32,9 +32,9 @@ body::before {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); 
+  width: auto;
+  height: auto;
+  background-color: rgba(0, 0, 0, 0.7); 
   z-index: 1;
 }
 .container {
@@ -42,7 +42,7 @@ body::before {
   border: 2px solid #333;
   background-color: rgba(29, 91, 30, 0.8);
   max-width: 90%;
-  margin: 0 auto;
+  margin: 30px auto;
   padding: 25px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -85,5 +85,5 @@ button:hover {
   color:#e9c46a;;
   font-size:30px;
   font-weight: 800;
-  margin: 20px ;
+  margin: 15px ;
 }
